--- a/www/templates/rating.html
+++ b/www/templates/rating.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class='beer-rating-card'>
-        <p class='rating-text'>Yay or Nay?</p>
+        <p class='rating-text'>Rate Your Beer</p>
 
         <div class='star-chart'>
           <span class="beerRate">
@@ -28,7 +28,7 @@
 
     <div class='rating-card'>
       <p class='rating-text'><b>Any Specific Beer Types?</b></p>
-      <p class='rating-text'>(Might be on your menu)</p>
+      <p class='rating-text'>(Check your menu)</p>
       <div class='tag-container'>
       <label id="tag-label-{{tag.id}}" ng-repeat="tag in allTags.associatedTypes" class='tag'>
         <input
