Commented out color wheel for launch

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -8,7 +8,7 @@
        <a href="#/app/new_recs" class="button recommendation-button">Recommend a Random Beer</a>
       </div>
     </div>
-    <div class='flavor-wheel'>
+    <!-- <div class='flavor-wheel'>
         <div fw-visualization class='svg-wheel'>
         <div class='profile-card'>
         <h1 class='profile-card-title'>Beer Preference Wheel</h1>
@@ -17,6 +17,6 @@
           <i class='help ion-help-circled' ng-click='showPopup()'></i>
         </div>
       </div>
-    </div>
+    </div> -->
   </ion-content>
 </ion-view>
